apps/searxng/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: searxng
  namespace: traefik
spec:
  entryPoints:
    - frp
  routes:
    - match: Host(`search.${DOMAIN}`)
      kind: Rule
      middlewares:
        - name: frp-headers
          namespace: traefik
        - name: authelia-auth
          namespace: traefik
      services:
        - name: searxng
          port: 80
          namespace: searxng
